# http-grpc

./: .gitignore  README.md
client/: README.md  package-lock.json  package.json
client/src/: App.js
client/src/proto/: task_service.proto
proto/: task_service_grpc_web_pb.js  task_service_pb.js
server/: Cargo.toml  Dockerfile  build.rs  envoy_grpc_web.yaml  envoy_grpc_web_with_tls.yaml  k8s_config.yaml
server/src/: main.rs
